--- a/package.json
+++ b/package.json
@@ -10,17 +10,21 @@
   },
   "dependencies": {
     "@next/font": "^14.2.15",
+    "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.548.0",
+    "mongoose": "^8.19.2",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "recharts": "^3.3.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/bcrypt": "^6.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
